添加示例路由 添加基础控制器 添加示例控制器

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,11 @@
 {
     "require": {
         "slim/slim": "^3.10"
+    },
+    "autoload": {
+        "psr-4": {
+            "Application\\Cores\\":"src/cores/",
+            "Application\\Modules\\":"src/modules/"
+        }
     }
 }
