--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
-        "slim/slim": "^3.10"
+        "slim/slim": "^3.10",
+        "catfan/Medoo": "^1.5"
     },
     "autoload": {
         "psr-4": {
