--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "require": {
         "slim/slim": "^3.10",
-        "catfan/Medoo": "^1.5"
+        "catfan/Medoo": "^1.5",
+        "vlucas/phpdotenv": "^2.5"
     },
     "autoload": {
         "psr-4": {
