规范目录结构;修复linux大小写问题

--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,8 @@
     },
     "autoload": {
         "psr-4": {
-            "Application\\Cores\\":"src/cores/",
-            "Application\\Modules\\":"src/modules/"
+            "Application\\Cores\\":"src/Cores/",
+            "Application\\Modules\\":"src/Modules/"
         }
     }
 }
