--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "require": {
         "slim/slim": "^3.10",
         "catfan/Medoo": "^1.5",
-        "vlucas/phpdotenv": "^2.5"
+        "vlucas/phpdotenv": "^2.5",
+        "slim/php-view": "^2.2.0"
     },
     "autoload": {
         "psr-4": {
