添加redis操作类，待完善

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
         "catfan/Medoo": "^1.5",
         "vlucas/phpdotenv": "^2.5",
         "slim/php-view": "^2.2.0",
-        "symfony/cache": "^4.1"
+        "symfony/cache": "^4.1",
+        "predis/predis": "^1.1"
     },
     "autoload": {
         "psr-4": {
