composer规范化,添加name与description

--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,6 @@
 {
+    "name": "TimeFinger/slim-skeleton",
+    "description": "My slim sketeton",
     "require": {
         "slim/slim": "^3.10",
         "catfan/Medoo": "^1.5",
