添加src/Models到自动加载目录

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "psr-4": {
             "Application\\Cores\\":"src/Cores/",
             "Application\\Modules\\":"src/Modules/",
+            "Application\\Models\\":"src/Models/",
             "Application\\Tasks\\":"src/Tasks/"
         }
     },
