--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "slim/php-view": "^2.2.0",
         "symfony/cache": "^4.1",
         "predis/predis": "^1.1",
-        "wp-cli/php-cli-tools": "^0.11.10"
+        "wp-cli/php-cli-tools": "^0.11.10",
+        "monolog/monolog": "^1.24"
     },
     "autoload": {
         "psr-4": {
