--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.2"
+        "phpunit/phpunit": "^6.2",
+        "fzaninotto/faker": "^1.8"
     }
 }
