--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,3 +17,10 @@ services:
             MYSQL_ROOT_PASSWORD: 123456
         ports:
            - 3306:3306
+
+    redis:
+        image: redis:4.0.11-alpine3.8
+        container_name: redis
+        restart: always
+        ports:
+           - 6379:6379
