--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "symfony/cache": "^4.1",
         "predis/predis": "^1.1",
         "wp-cli/php-cli-tools": "^0.11.10",
-        "monolog/monolog": "^1.24"
+        "monolog/monolog": "^1.24",
+        "mongodb/mongodb": "^1.4"
     },
     "autoload": {
         "psr-4": {
